# samplerCensoARG

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  samplear.py  tags
censo_sampler/: cli.py  export.py  io.py  sample.py  validate.py
data/: agg_circuitos.csv  agg_circuitos_CONDACT.csv  agg_circuitos_P02.csv  agg_circuitos_P09.csv  agg_circuitos_PROP.csv  agg_circuitos_age_bin.csv
data/censo_samples/: Untitled.ipynb
data/info/: dptos.csv  provs.csv  proy_pop20012225.csv
notebooks/: Sampleos de Censo.ipynb  agregador custom.ipynb  samplear.ipynb  samplear.py
notebooks/.ipynb_checkpoints/: Sampleos de Censo-checkpoint.ipynb
notebooks/data/censo_samples/: table_f0.001_2015_ARG.csv
